changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

common/object.c: fix memory leak.
Nicolas Weeger, 2008-02-03

Remove weather code, unused and messy.
 include/global.h sproto.h tod.h
 common/init.c map.c
 lib/i18n/messages.en messages.fr settings
 server/c_misc.c commands.c init.c weather.c
Nicolas Weeger, 2008-02-01

Fix for bug #1882265: Server failure when all exp_table entries commented out.
 common/exp.c: exit() in case of errors.
 lib/exp_table: enable a table by default.
Nicolas Weeger, 2008-02-01

plugins/cfanim/cfanim.c,
plugins/cfanim/include/cfanim.h,
plugins/cfanim/include/cfanim_proto.h:
  Changed the name of variables that some C compilers considered as
  keywords.
Yann "gros" Chachkoff 2008-02-01

socket/request.c: trash obsolete code (and version is checked for >= 1027 anyway).
Nicolas Weeger, 2008-01-30

configure.in: Remove to eliminate autoconf complaints that configure.ac and
  configure.in exist.
include/define.h: Add a comment to HOLE.
include/, include/.cvsignore: svnversion.h should not be controlled in SVN so
  ignore it. Changed svn:ignore property accordingly.
Kevin Bulgrien 2008-01-30

include/Makefile.am:  Use hint at http://www.in-ulm.de/~mascheck/various/echo/
  to try to remove a portability issue regarding use of echo -n.
Kevin Bulgrien 2008-01-29

Fix for bug 1850524 - SDL clients crash when entering boat.  Bogus scroll
values were being sent on mapscroll, but only the SDL client did anything
with the mapscroll variables, so only it saw problems.
---
types/transport/transport.c: Store away player x and y positions so we
  can do proper comparisions.  Move update of applier values out of