@@ -51,6 +51,8 @@
  *  - map_no_exit.template: template to use when no exit on the map.
  *  - map_with_exit.template: template to use when there are exits on the map.
  *   - map_exit.template: template to use for each exit on the map.
+ *  - map_lore: template to use to insert the map's lore.
+ *  - map_no_lore: template when no lore for the map.
  * - region.template: region page template.
  *  - region_letter: template for one letter
  *   - region_map.template: one map in a region
@@ -77,6 +79,7 @@
  *  - REGIONNAME: name of map's region.
  *  - REGIONINDEXPATH: path to region index file.
  *  - WORLDMAPPATH: path to world map file.
+ *  - MAPLORE: map's lore.
  * - map_no_exit:
  *  - tags for map, except MAPEXIT.
  * - map_with_exit:
@@ -86,6 +89,11 @@
  *  - map's tags.
  *  - EXITNAME: name of exit (part of the path after /).
  *  - EXITPATH: relative path of exit's page.
+ * - map_lore:
+ *  - tags for map, except MAPEXIT.
+ *  - MAPLORE: map's lore.
+ * - map_no_lore:
+ *  - tags for map, except MAPEXIT.
  * - region:
  *  - MAPCOUNT: count of maps in region.
  *  - LETTERS: text generated by region_letter processing.
@@ -179,6 +187,8 @@ char* map_template;                 /**< Map template. */
 char* map_no_exit_template;         /**< World map template: no exit. */
 char* map_with_exit_template;       /**< Map template: exit template. */
 char* map_exit_template;            /**< Map template: one exit. */
+char* map_lore_template;            /**< Map template: lore. */
+char* map_no_lore_template;         /**< Map template: no lore. */
 
 char* index_template;           /**< Index page template. */
 char* index_letter;             /**< Index page template: one letter, including the maps it contains. */
@@ -736,6 +746,7 @@ void domap(const char* name)
     char tmppath[MAX_BUF];
 
     char* exits_text;
+    char* maplore;
 
     char htmlpath[500];         /* Map file path. */
     char mappic[500];           /* Name of map's full size picture. */
@@ -749,8 +760,8 @@ void domap(const char* name)
     char worldmappath[500];     /* Path to world map. */
     int needpic = 0;
 
-    const char* vars[] = { "NAME", "MAPPATH", "MAPNAME", "MAPPIC", "MAPSMALLPIC", "MAPEXIT", "INDEXPATH", "REGIONPATH", "REGIONNAME", "REGIONINDEXPATH", "WORLDMAPPATH", NULL, NULL, NULL };
-    const char* values[] = { name, htmlpath, mapname, mappic, mapsmallpic, "", indexpath, regionpath, regionname, regionindexpath, worldmappath, NULL, NULL, NULL };
+    const char* vars[] = { "NAME", "MAPPATH", "MAPNAME", "MAPPIC", "MAPSMALLPIC", "MAPEXIT", "INDEXPATH", "REGIONPATH", "REGIONNAME", "REGIONINDEXPATH", "WORLDMAPPATH", "MAPLORE", NULL, NULL, NULL };
+    const char* values[] = { name, htmlpath, mapname, mappic, mapsmallpic, "", indexpath, regionpath, regionname, regionindexpath, worldmappath, NULL, NULL, NULL, NULL };
     int vars_count = 0;
     while (vars[vars_count])
         vars_count++;
@@ -940,6 +951,15 @@ void domap(const char* name)
             }
         }
 
+    if (m->maplore) {
+        values[11] = m->maplore;
+        maplore = do_template(map_lore_template, vars, values);
+    }
+    else {
+        maplore = do_template(map_no_lore_template, vars, values);
+    }
+    values[11] = maplore;
+
     if (exits != NULL)
     {
         char* one_exit = NULL;
@@ -983,6 +1003,7 @@ void domap(const char* name)
     fclose(out);
     free(tmp);
     free(exits_text);
+    free(maplore);
 
     if (needpic) {
         out = fopen(mappicpath, "wb+");
@@ -1661,6 +1682,10 @@ int main(int argc, char** argv)
     if (read_template("templates/map_with_exit.template", &map_with_exit_template))
         return;
     if (read_template("templates/map_exit.template", &map_exit_template))
+        return;
+    if (read_template("templates/map_lore.template", &map_lore_template))
+        return;
+    if (read_template("templates/map_no_lore.template", &map_no_lore_template))
         return;
 
     if (read_template("templates/index.template", &index_template))
