@@ -14,6 +14,8 @@ Map view:
 <br />
 #MAPEXIT#
 <br />
+#MAPLORE#
+<br />
 <a href="#REGIONPATH#">#REGIONNAME#'s map index</a> | <a href="#REGIONINDEXPATH#">Region index</a> | <a href="#INDEXPATH#">Global map index</a> | <a href="#WORLDMAPPATH#">World map</a>
 </body>
 </html>
