@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add lore information to map page.
+ utils/mapper.c
+Added files:
+ utils/templates/map_lore.template map_no_lore.template
+Nicolas Weeger, 2008-02-03
+
 common/object.c: fix memory leak.
 Nicolas Weeger, 2008-02-03
 
